--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
-MONGO_URI=mongodb://127.0.0.1:27017/stockScreener
-FYERS_APP_ID=yourAppID-100
-FYERS_SECRET=yourSecret
-FYERS_REDIRECT_URI=http://127.0.0.1:3000/auth/callback
+MONGO_URI=mongodb+srv://adeveloper240:Sata20252025@ecom.jkzr9ix.mongodb.net/PMSModule?appName=pmsmodule
+FYERS_APP_ID=J05EAHN399-100
+FYERS_SECRET=CR7896S18Y
+FYERS_REDIRECT_URI=http://webhook.site/626ff9e9-1134-4e43-a0f3-d54f90cc3a84
 FYERS_PIN=5985  
