--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ MONGO_URI=mongodb+srv://adeveloper240:Sata20252025@ecom.jkzr9ix.mongodb.net/PMSM
 FYERS_APP_ID=J05EAHN399-100
 FYERS_SECRET=CR7896S18Y
 FYERS_REDIRECT_URI=http://webhook.site/626ff9e9-1134-4e43-a0f3-d54f90cc3a84
-FYERS_PIN=5985  
+FYERS_PIN=5985
+JWT_SECRET=fsdkjhg3787gwhe2SFa9ghw89ghwgghsdsf34356345tg4ws5gsSF
