--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "fyers-api-v3": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.7.2",
