--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pmsmodule",
   "version": "1.0.0",
   "description": "",
-  "main": "fyersAuth.js",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js"
@@ -13,16 +13,23 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "fs": "^0.0.1-security",
     "fyers-api-v3": "^1.4.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.7.2",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
