--- a/.env
+++ b/.env
@@ -1,7 +1,88 @@
+
+
+
+
+
+# -------------------------
+#  🌐 General Server Config
+# -------------------------
 PORT=3000
+NODE_ENV=production
 MONGO_URI=mongodb+srv://adeveloper240:Sata20252025@ecom.jkzr9ix.mongodb.net/PMSModule?appName=pmsmodule
+JWT_SECRET=fsdkjhg3787gwhe2SFa9ghw89ghwgghsdsf34356345tg4ws5gsSF
+TIMEZONE=Asia/Kolkata
+
+# -------------------------
+#  🔑 FYERS API (for history & quotes)
+# -------------------------
 FYERS_APP_ID=J05EAHN399-100
 FYERS_APP_SECRET=CR7896S18Y
 FYERS_REDIRECT_URI=http://webhook.site/626ff9e9-1134-4e43-a0f3-d54f90cc3a84
+FYERS_API_BASE=https://api.fyers.in/api/v3
+FYERS_DATA_BASE=https://api.fyers.in/data
 FYERS_PIN=5985
-JWT_SECRET=fsdkjhg3787gwhe2SFa9ghw89ghwgghsdsf34356345tg4ws5gsSF
+
+# -------------------------
+#  💹 Angel One Publisher API
+# -------------------------
+ANGEL_API_KEY=5qrQPj3t
+ANGEL_API_SECRET=4cf6d442-05e8-43c5-bc31-6ed0c3cbcbee
+ANGEL_REDIRECT_URL=https://intradaygain.com/auth/angel/callback
+ANGEL_BASE_URL=https://apiconnect.angelbroking.com
+ANGEL_ORDER_URL=https://apiconnect.angelbroking.com/rest/secure/angelbroking/order/v1/placeOrder
+
+
+#------------------------
+# RAZORPAY 
+#--------------------------
+
+
+
+RAZORPAY_KEY_ID= 
+RAZORPAY_KEY_SECRET=dsafh4378wf8i
+
+# -------------------------
+#  ⚙️ Engine / Scheduler Controls
+# -------------------------
+M1_BATCH_SIZE=200
+M1_ROTATE_INTERVAL_MS=5000
+M1_HEARTBEAT_INTERVAL_MS=10000
+M1_PREV_CLOSE_CONCURRENCY=12
+M1_DB_UPSERT_CONCURRENCY=12
+M1_ALERT_THRESHOLD_PCT=5
+
+# -------------------------
+#  🧠 Strategy / Risk Settings
+# -------------------------
+RSI_ENTRY_MIN=40
+RSI_ENTRY_MAX=50
+DEFAULT_TP_PCT=1.5
+DEFAULT_SL_PCT=0.75
+
+# -------------------------
+#  💰 Margin & Trade Control
+# -------------------------
+# These act as global defaults; each user may override with their personal allowedMarginPct (20–100)
+DEFAULT_ALLOWED_MARGIN_PCT=50
+# Prevent new entries after 14:45 IST
+CUT_OFF_HOUR=14
+CUT_OFF_MINUTE=45
+
+# -------------------------
+#  🧪 Paper Trading Defaults
+# -------------------------
+IS_PAPER_TRADING_ACTIVE=true
+IS_LIVE_EXECUTION_ALLOWED=false
+DEFAULT_PAPER_QTY=1
+
+# -------------------------
+#  🕒 Scheduler (poll interval)
+# -------------------------
+# The scheduler triggers autoEnterOnSignal & checkOpenTradesAndUpdate
+SCHEDULER_INTERVAL_SEC=30
+
+# -------------------------
+#  📊 Logging / Debug
+# -------------------------
+LOG_LEVEL=info
+
