--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
+    "express-session": "^1.18.2",
     "fs": "^0.0.1-security",
     "fyers-api-v3": "^1.4.2",
     "helmet": "^8.1.0",
